@@ -96,6 +96,8 @@ Release 0.11.0 - unreleased
 
   BUG FIXES
 
+    TAJO-1569: BlockingRpcClient can make other request fail. (jinho)
+
     TAJO-1564: TestFetcher fails occasionally. (jinho)
 
     TAJO-1497: RPC client does not share a connection. (jinho)
